--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "sort-by": "^1.2.0",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
