--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "framer-motion": "^12.23.24",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
-    "sort-by": "^1.2.0",
+    "sort-by": "^0.0.2",
     "swiper": "^11.0.5",
     "typewriter-effect": "^2.21.0"
   },
